--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roche Leigh Construction</title>
-    <link rel="stylesheet" href="styles/index.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Roche Leigh Construction</title>
+	<link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
-    <nav class="navigation-bar">
+	<nav class="navigation-bar">
 	
-        <div class="navigation-bar__company-details">
+		<div class="navigation-bar__company-details">
 
-            <i class="fa fa-lg fa-phone" aria-hidden="true"></i>
-            <span>07957076699</span>
-            <i class="fa fa-lg fa-facebook-official" aria-hidden="true"></i>
-            <i class="fa fa-lg fa-envelope" aria-hidden="true"></i>
-            <i class="fa fa-lg fa-instagram" aria-hidden="true"></i>
-            <i class="fa fa-lg fa-twitter-square" aria-hidden="true"></i>
-            <i class="fa fa-lg fa-google-plus" aria-hidden="true"></i>
+			<i class="fa fa-lg fa-phone" aria-hidden="true"></i>
+			<span>07957076699</span>
+			<i class="fa fa-lg fa-facebook-official" aria-hidden="true"></i>
+			<i class="fa fa-lg fa-envelope" aria-hidden="true"></i>
+			<i class="fa fa-lg fa-instagram" aria-hidden="true"></i>
+			<i class="fa fa-lg fa-twitter-square" aria-hidden="true"></i>
+			<i class="fa fa-lg fa-google-plus" aria-hidden="true"></i>
 
-        </div>
+		</div>
 
 		<svg id="hamburger-menu-icon" class="navigation-bar__hamburger-menu" viewBox="0 0 80 50" width="30" height="30" onclick="toggleMenu()">
 			<rect width="80" height="10" rx="5" fill="white"></rect>
@@ -28,20 +28,40 @@
 			<rect y="40" width="80" height="10" rx="5" fill="white"></rect>
 		</svg>
 	
-    </nav>
-    
-    <div class="navigation-menu">
+	</nav>
+	
+	<div class="navigation-menu">
 
 		<ul class="navigation-menu__links">
 			<li class="navigation-menu__link"><a href="#about">About Us</a></li>
 			<li class="navigation-menu__link"><a href="#services">Our Services</a></li>
 			<li class="navigation-menu__link"><a href="#testimonials">Typical Journey</a></li>
 			<li class="navigation-menu__link"><a href="#recent-projects">Recent Projects</a></li>
-        </ul>
+		</ul>
 
 	</div>
 
-    <script src="https://kit.fontawesome.com/8f65b50ba2.js" crossorigin="anonymous"></script>
-    <script src="scripts/menu.js"></script>
+	<main>
+
+		<div class="background-container">
+
+			<svg viewBox="0 0 200 200" width="100" height="100">
+				<rect width="200" height="200" style="fill: #002454; stroke: white; stroke-width: 20"></rect>
+				<rect width="140" height="140" style="fill: #21497A; stroke: white; stroke-width: 10" y="56" x="56"></rect>
+				<rect width="90" height="90" style="fill: #4f6793; stroke: white; stroke-width: 10" y="56" x="106"></rect>
+			</svg>
+	
+			<h1 class="background-container__title">Roche Leigh</h1>
+			<h2 class="background-container__construction">CONSTRUCTION</h2>
+			<span class="background-container__title-xl">Roche Leigh Construction</span>
+	
+		</div>
+
+	</main>
+	
+
+
+	<script src="https://kit.fontawesome.com/8f65b50ba2.js" crossorigin="anonymous"></script>
+	<script src="scripts/menu.js"></script>
 </body>
 </html>
