Adds the experts section to project.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
 	
 		</div>
 
+		<div class="experts-wrapper" id="about">
+			
+			<div class="experts-container">
+
+				<div class="experts-container__info-text">
+					<h2 class="experts-container__title">We are experts in the construction field</h2>
+					<p>
+						We have over 20 years..... At sed impedit, ab a officia blanditiis, fuga commodi delectus veniam architecto in nihil numquam eum maiores. Amet nihil, dolorum sit vitae fugit maxime earum optio culpa eum. Voluptates, labore.
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam similique repellat dignissimos, omnis at ducimus pariatur odio praesentium eveniet porro sit quod, sequi unde atque magnam voluptate quae voluptatum. Delectus.
+					</p>
+				</div>
+	
+				<img class="experts-container__image" src="/images/man_on_scaffolding.jpg" />
+
+			</div>
+
+		</div>		
+
 	</main>
 	
 
