Adds our services section to project.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	
 		</div>
 
+
 		<div class="experts-wrapper" id="about">
 			
 			<div class="experts-container">
@@ -75,7 +76,58 @@
 
 			</div>
 
-		</div>		
+		</div>
+		
+		
+		<div class="services" id="services">
+			
+			<h2 class="services__title">Our Services</h2>
+			<p class="services_info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sed officiis ad, tempora recusandae molestiae doloribus deleniti suscipit. Nemo, perspiciatis.</p>
+			
+			<div class="service-cards">
+
+				<div class="service-card">
+
+					<div class="service-card__icon-wrapper">
+						<i class="fas fa-hammer service-card__icon"></i>
+					</div>
+			
+					<div class="service-card__info">
+						<h4 class="service-card__title">WE DO STUFF</h4>
+						<p class="service-card__info-text">All the stuff you ever wanted...</p>
+					</div>
+	
+				</div>
+	
+				<div class="service-card">
+
+					<div class="service-card__icon-wrapper">
+						<i class="fas fa-hard-hat service-card__icon"></i>
+					</div>
+
+					<div class="service-card__info">
+						<h4 class="service-card__title">MORE STUFF</h4>
+						<p class="service-card__info-text">More stuff you ever wanted...</p>
+					</div>
+
+				</div>
+
+				<div class="service-card">
+
+					<div class="service-card__icon-wrapper">
+						<i class="fas fa-tools service-card__icon"></i>
+					</div>
+
+					<div class="service-card__info">
+						<h4 class="service-card__title">ALL THE STUFF</h4>
+						<p class="service-card__info-text">All the stuff stuff you ever wanted...</p>
+					</div>
+
+				</div>				
+			
+			</div>
+
+		</div>
 
 	</main>
 	
