Adds recent projects section to project.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,80 @@
 
 		</div>
 
+
+		<div class="recent-projects-wrapper" id="recent-projects">
+
+			<div class="recent-projects">
+	
+				<h2 class="recent-projects__title">Recent Projects</h2>
+				<p>Here is some of our most recent works.</p>
+				<br />
+	
+				<div class="recent-project-cards">
+	
+					<div class="recent-project-card">
+						<div class="recent-project-card__image recent-project-card__image--a">
+							<a href="#" class="recent-project-card__hover-description">Bamford</a>
+						</div>
+						<div class="recent-project-card__description"></div>
+					</div>
+	
+					<div class="recent-project-card">
+						<div class="recent-project-card__image recent-project-card__image--b">
+							<a href="#" class="recent-project-card__hover-description">Wardle</a>
+						</div>
+						<div class="recent-project-card__description"></div>
+					</div>				
+	
+					<div class="recent-project-card">
+						<div class="recent-project-card__image recent-project-card__image--c">
+							<a href="#" class="recent-project-card__hover-description">Littleborough</a>
+						</div>
+						<div class="recent-project-card__description"></div>
+					</div>	
+	
+				</div>
+	
+			</div>
+
+		</div>
+
+
+		<div class="testimonials" id="testimonials">
+
+			<h2 class="testimonials__title">Testimonials</h2>
+
+			<div class="testimonial-wrapper">
+
+				<div class="testimonial">
+	
+					<div class="testimonial__header">
+						<img class="testimonial__image" src="janedoe.jpg" alt="">
+						<p class="testimonial__name">Jane Doe, Bamford</p>
+					</div>
+					<div class="testimonial__description">
+						<p>"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione dolores minus similique, nulla quisquam quaerat amet accusamus modi natus odit."</p>
+					</div>
+	
+				</div>
+	
+				<div class="testimonial">
+	
+					<div class="testimonial__header">
+						<img class="testimonial__image" src="johndoe.jpg" alt="">
+						<p class="testimonial__name">John Doe, Deeplish</p>
+					</div>
+					<div class="testimonial__description">
+						<p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quis quos excepturi nihil ipsam eaque omnis rerum illum cumque odio."</p>
+					</div>
+	
+				</div>
+		
+			</div>
+
+		</div>
+
+
 	</main>
 	
 
