Adds testimonials section to project.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<div class="testimonial">
 	
 					<div class="testimonial__header">
-						<img class="testimonial__image" src="janedoe.jpg" alt="">
+						<img class="testimonial__image" src="/images/janedoe.jpg" alt="">
 						<p class="testimonial__name">Jane Doe, Bamford</p>
 					</div>
 					<div class="testimonial__description">
@@ -189,7 +189,7 @@
 				<div class="testimonial">
 	
 					<div class="testimonial__header">
-						<img class="testimonial__image" src="johndoe.jpg" alt="">
+						<img class="testimonial__image" src="/images/johndoe.jpg" alt="">
 						<p class="testimonial__name">John Doe, Deeplish</p>
 					</div>
 					<div class="testimonial__description">
@@ -204,8 +204,6 @@
 
 
 	</main>
-	
-
 
 	<script src="https://kit.fontawesome.com/8f65b50ba2.js" crossorigin="anonymous"></script>
 	<script src="scripts/menu.js"></script>
