Change background-image to relative url.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					</p>
 				</div>
 	
-				<img class="experts-container__image" src="/images/man_on_scaffolding.jpg" />
+				<img class="experts-container__image" src="./images/man_on_scaffolding.jpg" />
 
 			</div>
 
