Adds helper styles css, adds seperators between titles.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 			<div class="experts-container">
 
 				<div class="experts-container__info-text">
-					<h2 class="experts-container__title">We are experts in the construction field</h2>
+					<h2 class="experts-container__title">We are experts in the construction industry</h2>
+					<div class="seperator seperator--left-align"></div>
 					<p>
 						We have over 20 years..... At sed impedit, ab a officia blanditiis, fuga commodi delectus veniam architecto in nihil numquam eum maiores. Amet nihil, dolorum sit vitae fugit maxime earum optio culpa eum. Voluptates, labore.
 					</p>
@@ -82,6 +83,8 @@
 		<div class="services" id="services">
 			
 			<h2 class="services__title">Our Services</h2>
+			<div class="seperator"></div>
+
 			<p class="services_info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sed officiis ad, tempora recusandae molestiae doloribus deleniti suscipit. Nemo, perspiciatis.</p>
 			
 			<div class="service-cards">
@@ -135,8 +138,10 @@
 			<div class="recent-projects">
 	
 				<h2 class="recent-projects__title">Recent Projects</h2>
+				<div class="seperator"></div>
+
 				<p>Here is some of our most recent works.</p>
-				<br />
+
 	
 				<div class="recent-project-cards">
 	
@@ -171,6 +176,7 @@
 		<div class="testimonials" id="testimonials">
 
 			<h2 class="testimonials__title">Testimonials</h2>
+			<div class="seperator"></div>
 
 			<div class="testimonial-wrapper">
 
