Adds scroll position animations on elements.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Roche Leigh Construction</title>
 	<link rel="stylesheet" href="styles/index.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -51,14 +52,14 @@
 				<rect width="90" height="90" style="fill: #4f6793; stroke: white; stroke-width: 10" y="56" x="106"></rect>
 			</svg>
 	
-			<h1 class="background-container__title">Roche Leigh</h1>
-			<h2 class="background-container__construction">CONSTRUCTION</h2>
-			<span class="background-container__title-xl">Roche Leigh Construction</span>
+			<h1 class="background-container__title fade-in-up">Roche Leigh</h1>
+			<h2 class="background-container__construction fade-in-up">CONSTRUCTION</h2>
+			<span class="background-container__title-xl fade-in-up">Roche Leigh Construction</span>
 	
 		</div>
 
 
-		<div class="experts-wrapper" id="about">
+		<div class="experts-wrapper" id="about" data-aos="fade" data-aos-duration="1000">
 			
 			<div class="experts-container">
 
@@ -80,7 +81,7 @@
 		</div>
 		
 		
-		<div class="services" id="services">
+		<div class="services" id="services" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in">
 			
 			<h2 class="services__title">Our Services</h2>
 			<div class="seperator"></div>
@@ -133,7 +134,7 @@
 		</div>
 
 
-		<div class="recent-projects-wrapper" id="recent-projects">
+		<div class="recent-projects-wrapper" id="recent-projects" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in">
 
 			<div class="recent-projects">
 	
@@ -212,6 +213,8 @@
 	</main>
 
 	<script src="https://kit.fontawesome.com/8f65b50ba2.js" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="./scripts/menu.js"></script>
+	<script src="./scripts/scroll-animations.js"></script>
 </body>
 </html>
