Makes scroll animation elements only animate once.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
 		</div>
 
 
-		<div class="experts-wrapper" id="about" data-aos="fade" data-aos-duration="1000">
+		<div 
+			class="experts-wrapper"
+			id="about"
+			data-aos="fade"
+			data-aos-duration="1000"
+			data-aos-once="true">
 			
 			<div class="experts-container">
 
@@ -81,7 +86,12 @@
 		</div>
 		
 		
-		<div class="services" id="services" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in">
+		<div 
+			class="services"
+			id="services"
+			data-aos="fade-up"
+			data-aos-duration="600"
+			data-aos-once="true">
 			
 			<h2 class="services__title">Our Services</h2>
 			<div class="seperator"></div>
@@ -134,7 +144,12 @@
 		</div>
 
 
-		<div class="recent-projects-wrapper" id="recent-projects" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in">
+		<div 
+			class="recent-projects-wrapper"
+			id="recent-projects"
+			data-aos="fade-up"
+			data-aos-duration="600"
+			data-aos-once="true">
 
 			<div class="recent-projects">
 	
